--- a/app/sponsorHome/sponsorListingBox/view.html
+++ b/app/sponsorHome/sponsorListingBox/view.html
@@ -50,15 +50,15 @@
                 <span class="glyphicon"></span>
                 {{lists.name}}
               </a>
-              <a href="/#/counties/{{lists.name|createSlug}}" class="ng-binding" ng-if="lists.type==='county'">
+              <a href="/counties/{{lists.name|createSlug}}" class="ng-binding" ng-if="lists.type==='county'">
                 <span class="glyphicon"></span>
                 {{lists.name}}
               </a>
-              <a href="/#/cities/{{lists.name|createSlug}}" class="ng-binding" ng-if="lists.type==='city'">
+              <a href="/cities/{{lists.name|createSlug}}" class="ng-binding" ng-if="lists.type==='city'">
                 <span class="glyphicon"></span>
                 {{lists.name}}
               </a>
-              <a href="/#/state/{{lists.name|createSlug}}-rehab-centers" class="ng-binding" ng-if="lists.type==='state'">
+              <a href="/state/{{lists.name|createSlug}}-rehab-centers" class="ng-binding" ng-if="lists.type==='state'">
                 <span class="glyphicon"></span>
                 {{lists.name}}
               </a>
