--- a/app/signUp/sponserPage/view.html
+++ b/app/signUp/sponserPage/view.html
@@ -36,7 +36,7 @@ accross all audience.</p>
 
 
     </div>
-    <p class="stick-next-left font-normal"><a href="javascript:void(0)" ng-click="$ctrl.testCenter()">Back</a></p>
+    <p class="stick-next-left font-normal"><a href="javascript:window.history.back();" ng-click="$ctrl.testCenter()">Back</a></p>
     <p class="stick-next-right"><a href="javascript:void(0)" ng-click="$ctrl.publish_ads()">Next</a></p>
   </div>
 </div>
