--- a/app/signUp/testCenter/view.html
+++ b/app/signUp/testCenter/view.html
@@ -73,7 +73,7 @@
             <div class="col-md-12" id="tags{{tags.id}}" style="padding-bottom:10px;" ng-init="$ctrl.tagToggle[tags.id]=0" ng-repeat="tags in $ctrl.tagsData.tags">
               <div>
                 <h4>{{tags.name}}</h4>
-                <span class="fix-right" ng-click="$ctrl.tagToggleDynamic(tags.id)"><i class="fa fa-caret-square-o-down" uib-tooltip="Show/hide " aria-hidden="true"></i></span>
+                <span style="cursor:pointer;" class="fix-right" ng-click="$ctrl.tagToggleDynamic(tags.id)"><i class="fa fa-caret-square-o-down" uib-tooltip="Show/hide " aria-hidden="true"></i></span>
               </div>
               <!-- <input type="checkbox" ng-repeat="child in tags.children" /> test1<br> -->
               <!-- {{$ctrl.tagCheckboxModel[tags.id]}} -->
@@ -82,10 +82,15 @@
               </div>
             </div>
           </div>
-      </form>
+        </form>
+      </div>
     </div>
+    <div class="col-md-12 " style="margin-top:50px;">
+      <p class="stick-next-tc"><a href="javascript:void(0);" ng-click="$ctrl.addCenter()" ng-disabled="$ctrl.centerForm.centerName.$invalid || ($ctrl.categoryModel.length===0) || $ctrl.centerForm.website.$invalid || $ctrl.centerForm.email.$invalid || $ctrl.centerForm.phone.$invalid || $ctrl.centerForm.address.$invalid">Next</a></p>
+
     </div>
   </div>
   <!-- <p class="stick-next-tc"><a href="javascript:void(0)" ng-click="$ctrl.optional_fields()" ng-disabled="">Next</a></p> -->
-  <p class="stick-next-tc"><a href="javascript:void(0);" ng-click="$ctrl.addCenter()" ng-disabled="$ctrl.centerForm.centerName.$invalid || ($ctrl.categoryModel.length===0) || $ctrl.centerForm.website.$invalid || $ctrl.centerForm.email.$invalid || $ctrl.centerForm.phone.$invalid || $ctrl.centerForm.address.$invalid">Next</a></p>
+
+  <!-- <p class="stick-next-tc pull-right"><a href="javascript:void(0);" ng-click="$ctrl.addCenter()" ng-disabled="$ctrl.centerForm.centerName.$invalid || ($ctrl.categoryModel.length===0) || $ctrl.centerForm.website.$invalid || $ctrl.centerForm.email.$invalid || $ctrl.centerForm.phone.$invalid || $ctrl.centerForm.address.$invalid">Next</a></p> -->
 </div>
