--- a/app/signUp/updateMembership/view.html
+++ b/app/signUp/updateMembership/view.html
@@ -63,7 +63,7 @@
 
           </div>
           <ul class="list-inline um-np">
-            <li><a href="#">Back</a></li>
+            <li><a href="javascript:window.history.back();">Back</a></li>
             <li><a href="javascript:void(0)" ng-click="$ctrl.sponser()">Continue without upgrade</a></li>
           </ul>
     </div>
