--- a/app/signUp/updateAds/view.html
+++ b/app/signUp/updateAds/view.html
@@ -112,7 +112,7 @@
               <p>Location:</p>
               <p>Website:
                 <input type="text" name="weblinkFooter" ng-model="$ctrl.weblinkFooter" ng-init="$ctrl.adsFormInit.weblinkFooter=1" ng-keypress="$ctrl.adsFormInit.weblinkFooter = 0" required/>
-              </p>              
+              </p>
               <span ng-show="$ctrl.updateAdsForm.weblinkFooter.$error.required && ($ctrl.adsFormInit.weblinkFooter===0)" class="help-block">Required</span>
             </div>
           </div>
@@ -132,7 +132,7 @@
         </form>
       </div>
     </div>
-    <p class="stick-next-left font-normal bottom-5"><a href="javascript:void(0)" ng-click="">Back</a></p>
+    <p class="stick-next-left font-normal bottom-5"><a href="javascript:window.history.back();" ng-click="">Back</a></p>
     <p class="stick-next-right bottom-5"><a href="javascript:void(0)" ng-click="$ctrl.updateAds()">Done</a></p>
   </div>
 </div>
