--- a/app/signUp/updateAds/view.html
+++ b/app/signUp/updateAds/view.html
@@ -44,6 +44,8 @@
                 <input type="text" name="weblinkHeader" ng-model="$ctrl.weblinkHeader" ng-init="$ctrl.adsFormInit.weblinkHeader=1" ng-keypress="$ctrl.adsFormInit.weblinkHeader = 0" required/>
               </p>
               <span ng-show="$ctrl.updateAdsForm.weblinkHeader.$error.required && ($ctrl.adsFormInit.weblinkHeader===0)" class="help-block">Required</span>
+              <span ng-show="$ctrl.updateAdsForm.weblinkHeader.$error.pattern && ($ctrl.adsFormInit.weblinkHeader===0)" class="help-block">Invalid website</span>
+
             </div>
             <div class="col-md-6"></div>
           </div>
@@ -78,7 +80,9 @@
                 <p>Website:
                   <input type="text" name="weblinkSidebar" ng-model="$ctrl.weblinkSidebar" ng-init="$ctrl.adsFormInit.weblinkSidebar=1" ng-keypress="$ctrl.adsFormInit.weblinkSidebar = 0" required/>
                 </p>
-                <span ng-show="$ctrl.updateAdsForm.weblinkSidebar.$error.required && ($ctrl.adsFormInit.weblinkSidebar===0)" class="help-block">Required</span>
+                  <span ng-show="$ctrl.updateAdsForm.weblinkSidebar.$error.required && ($ctrl.adsFormInit.weblinkSidebar===0)" class="help-block">Required</span>
+                  <span ng-show="$ctrl.updateAdsForm.weblinkSidebar.$error.pattern && ($ctrl.adsFormInit.weblinkSidebar===0)" class="help-block">Invalid website</span>
+
               </div>
             </div>
             <div class="col-md-6"></div>
@@ -111,9 +115,11 @@
               <p>Size:</p>
               <p>Location:</p>
               <p>Website:
-                <input type="text" name="weblinkFooter" ng-model="$ctrl.weblinkFooter" ng-init="$ctrl.adsFormInit.weblinkFooter=1" ng-keypress="$ctrl.adsFormInit.weblinkFooter = 0" required/>
+                <input type="text" name="weblinkFooter" ng-model="$ctrl.weblinkFooter" ng-init="$ctrl.adsFormInit.weblinkFooter=1" ng-keypress="$ctrl.adsFormInit.weblinkFooter = 0" ng-pattern="/^(?:(ftp|http|https):\/\/)?(?:([\w]{3})+\.)+([0-9 a-z]{2,30})?(?:[\.])+([a-z/.]{2,10})$/" required/>
               </p>
               <span ng-show="$ctrl.updateAdsForm.weblinkFooter.$error.required && ($ctrl.adsFormInit.weblinkFooter===0)" class="help-block">Required</span>
+              <span ng-show="$ctrl.updateAdsForm.weblinkFooter.$error.pattern && ($ctrl.adsFormInit.weblinkFooter===0)" class="help-block">Invalid website</span>
+
             </div>
           </div>
           <!-- Update Footer ads -->
