--- a/app/signUp/sponserPage/view.html
+++ b/app/signUp/sponserPage/view.html
@@ -31,7 +31,7 @@ with the target market that you are looking at.</p>
             <p>You can also choose to publish ads for your
 testcenter on our website to gain more visibility
 accross all audience.</p>
-            <p class="lead">Plublish my Ads</p>
+            <p class="lead"><a href="javascript:void(0)" ng-click="$ctrl.publish_ads()">Plublish my Ads</a></p>
           </div>
 
 
