--- a/app/signUp/productDetails/view.html
+++ b/app/signUp/productDetails/view.html
@@ -93,7 +93,7 @@
     </div>
     <div style="margin-top:50px;">
       <p class="stick-next-left"><a href="javascript:void(0)" ng-click="$ctrl.testCenter()">Add Test center</a></p>
-      <p class="stick-next-right"><a href="javascript:void(0)" ng-click="$ctrl.userCreate()">View my profile</a></p>
+      <p class="stick-next-right"><a href="javascript:void(0)" ng-click="$ctrl.viewProfile()">View my profile</a></p>
     </div>
   </div>
 </div>
