--- a/app/signUp/userProfile/view.html
+++ b/app/signUp/userProfile/view.html
@@ -26,6 +26,6 @@
       </div>
     </div>
     <p class="stick-next-left"><a href="javascript:void(0)" ng-click="$ctrl.testCenter()">Add Test center</a></p>
-    <p class="stick-next-right"><a href="javascript:void(0)" ng-click="$ctrl.userCreate()">View my profile</a></p>
+    <p class="stick-next-right"><a href="javascript:void(0)" ng-click="$ctrl.viewProfile()">View my profile</a></p>
   </div>
 </div>
