added sponsored page, added prerender config

--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
     <meta charset="utf-8">
     <title>Addiction Network</title>
     <meta name="description" content="">
+    <meta name="fragment" content="!">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="promatics">
