--- a/app/index.html
+++ b/app/index.html
@@ -24,6 +24,7 @@
     <meta property="og:site_name" content="Addiction Network" />
     <!-- / Yoast SEO plugin. -->
     <link rel="dns-prefetch" href="//fonts.googleapis.com" />
+    <meta name="fragment" content="!" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,700,700i,800" rel="stylesheet">
     <link rel="dns-prefetch" href="//s.w.org" />
     <link rel="alternate" type="application/rss+xml" title="Addiction Network &raquo; Feed" href="http://www.addictionnetwork.com/feed/" />
