--- a/app/signUp/testCenter/view.html
+++ b/app/signUp/testCenter/view.html
@@ -29,11 +29,22 @@
           </div>
           <div class="form-group">
             <!-- <input type="text" class="form-control" placeholder="Category"> -->
-            <div ng-dropdown-multiselect="" translation-texts="$ctrl.categorySelectText" options="$ctrl.centerCategories" selected-model="$ctrl.categoryModel" checkboxes="true" extra-settings="$ctrl.multiselectModelSettings" name="categories" required="" events="{onItemSelect: $ctrl.onCategorySelect, onItemDeselect: $ctrl.onCategoryDeSelect}"></div>
-            <span class="fix-right ng-binding" tooltip-placement="right" uib-tooltip="Explaination of each field here"><i class="fa fa-question-circle-o fa-2x"></i></span>
+            <!-- <div ng-dropdown-multiselect="" translation-texts="$ctrl.categorySelectText" options="$ctrl.centerCategories" selected-model="$ctrl.categoryModel" checkboxes="true" extra-settings="$ctrl.multiselectModelSettings" name="categories" required="" events="{onItemSelect: $ctrl.onCategorySelect, onItemDeselect: $ctrl.onCategoryDeSelect}"></div>
+            <span class="fix-right ng-binding" tooltip-placement="right" uib-tooltip="Explaination of each field here"><i class="fa fa-question-circle-o fa-2x"></i></span> -->
             <!-- <span ng-show="$ctrl.categoryModel.length ===0 && ($ctrl.centerFormInit.categories===0)" class="help-block">Required</span> -->
 
           </div>
+          <div class="form-group">
+            <input type="text" class="form-control" placeholder="Categories">
+            <span class="fix-right" ng-click="$ctrl.catgsToggleFun()" ng-init="$ctrl.catgsToggle=1" tooltip-placement="right" data-toggle="collapse" data-target="#collapse-catg" uib-tooltip="Show/hide Category"><i class="fa fa-arrow-down fa-2x"></i></span>
+          </div>
+
+          <div class="form-group" ng-if="$ctrl.catgsToggle===1">
+            <div ng-repeat="catgs in $ctrl.centerCategories" style="padding-bottom:7px;padding-left:5px;">
+              <input type="checkbox" id="catgs{{catgs.id}}" name="catg[]" ng-model="$ctrl.categoryModel[catgs.id]" /> {{catgs.label}}
+            </div>
+          </div>
+
           <div class="form-group">
             <input type="text" class="form-control" placeholder="Website" name="website" ng-model="$ctrl.website" ng-keypress="$ctrl.centerFormInit.website=0" required ng-pattern="/^(?:(ftp|http|https):\/\/)?(?:([\w]{3})+\.)+([0-9 a-z]{2,30})?(?:[\.])+([a-z/.]{2,10})$/">
             <span class="fix-right ng-binding" tooltip-placement="right" uib-tooltip="Explaination of each field here"><i class="fa fa-question-circle-o fa-2x"></i></span>
