--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <!--[if IE 7]> <html class="ie ie7" lang="en-US" prefix="og: http://ogp.me/ns#"> <![endif]-->
 <!--[if IE 8]> <html class="ie ie8" lang="en-US" prefix="og: http://ogp.me/ns#"> <![endif]-->
 <!--[if !(IE 7) | !(IE 8) ]><!-->
-<html lang="en-US" prefix="og: http://ogp.me/ns#">
+<html lang="en-US" prefix="og: http://ogp.me/ns#" ng-controller="rootCtrl">
   <!--<![endif]-->
 
   <head>
