modifications design and sponsor

--- a/app/signUp/productDetails/view.html
+++ b/app/signUp/productDetails/view.html
@@ -91,10 +91,12 @@
       </div>
 
     </div>
-    <div style="margin-top:50px;">
+
+    <div class="col-md-12" style="margin-top:50px;">
       <p class="stick-next-left"><a href="javascript:void(0)" ng-click="$ctrl.testCenter()">Add Test center</a></p>
       <!-- <p class="stick-next-left"><a href="javascript:void(0)" ng-click="$ctrl.viewProfile()">View my profile</a></p> -->
       <p class="stick-next-right"><a href="javascript:void(0)" ng-click="$ctrl.gotoPayment()">Next</a></p>
     </div>
+
   </div>
 </div>
