--- a/app/signUp/signupCompleted/view.html
+++ b/app/signUp/signupCompleted/view.html
@@ -13,8 +13,8 @@
             </div>
       </div>
       <div class="payment-btm">
-        <p class="stick-next-left font-normal"><a href="javascript:window.history.back();" ng-click="$ctrl.testCenter()">Close</a></p>
-        <p class="stick-next-right"><a href="javascript:void(0)" ng-click="$ctrl.publish_ads2()">View my profile</a></p>
+        <p class="stick-next-left font-normal"><a href="javascript:window.history.back();" ng-click="$ctrl.close()">Close</a></p>
+        <p class="stick-next-right"><a href="javascript:void(0)" ng-click="$ctrl.viewProfile()">View my profile</a></p>
       </div>
   </div>
 </div>
