--- a/app/signUp/updateAds/view.html
+++ b/app/signUp/updateAds/view.html
@@ -139,6 +139,6 @@
       </div>
     </div>
     <p class="stick-next-left font-normal bottom-5"><a href="javascript:window.history.back();" ng-click="">Back</a></p>
-    <p class="stick-next-right bottom-5"><a href="javascript:void(0)" ng-click="$ctrl.updateAds()">Done</a></p>
+    <p class="stick-next-right bottom-5"><a href="javascript:void(0)" ng-click="$ctrl.updateAds()">Next</a></p>
   </div>
 </div>
