--- a/app/signUp/optionalFields/view.html
+++ b/app/signUp/optionalFields/view.html
@@ -102,7 +102,7 @@
         <!-- <li><p><a href="javascript:void(0)" ng-click="$ctrl.updateMembership()">Done</a></p></li> -->
         <li>
           <p>
-            <a href="javascript:void(0);" ng-click="$ctrl.optionalFieldsSubmit()" ng-disabled="$ctrl.optionalForm.description.$invalid || $ctrl.optionalForm.overview.$invalid || $ctrl.optionalForm.treatmentApproach.$invalid || $ctrl.optionalForm.usp.$invalid">Done</a>
+            <a href="javascript:void(0);" ng-click="$ctrl.optionalFieldsSubmit()" ng-disabled="$ctrl.optionalForm.description.$invalid || $ctrl.optionalForm.overview.$invalid || $ctrl.optionalForm.treatmentApproach.$invalid || $ctrl.optionalForm.usp.$invalid">Next</a>
           </p>
         </li>
       </ul>
