--- a/app/signUp/updateMembership/view.html
+++ b/app/signUp/updateMembership/view.html
@@ -64,7 +64,7 @@
           </div>
           <ul class="list-inline um-np">
             <li><a href="javascript:window.history.back();">Back</a></li>
-            <li><a href="javascript:void(0)" ng-click="$ctrl.sponser()">Continue without upgrade</a></li>
+            <li><a href="javascript:void(0)" ng-click="$ctrl.sponser()">Continue <span ng-if="$ctrl.currentMembership===''">without upgrade</span><span ng-if="$ctrl.currentMembership==='sponsored'">with Gold membership</span> <span ng-if="$ctrl.currentMembership==='featured'">with Platinum membership</span> </a></li>
           </ul>
     </div>
   </div>
