--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
 
   <head>
     <meta charset="utf-8">
-    <title data-ng-bind="title">Addiction Network</title>
+    <title>{{$root.title}}</title>
     <meta name="description" content="{{$root.description}}">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
