--- a/app/sidePanel/areaFilterCard/view.html
+++ b/app/sidePanel/areaFilterCard/view.html
@@ -8,12 +8,12 @@
     </li> -->
     <li>
       <label>
-        <button type="button" class="btn btn-default" ng-click="$ctrl.goToCities()"><a href class="area-filter-link">View All Cities</a></button>
+        <button type="button" class="btn btn-default" ng-click="$ctrl.goToCities()"><a href="/#/cities/{{$ctrl.fullName}}" class="area-filter-link">View All Cities</a></button>
       </label>
     </li>
     <li>
       <label>
-        <button type="button" class="btn btn-default" ng-click="$ctrl.goToCounties()"><a href class="area-filter-link">View All Counties</a></button>
+        <button type="button" class="btn btn-default" ng-click="$ctrl.goToCounties()"><a href="/#/counties/{{$ctrl.fullName}}" class="area-filter-link">View All Counties</a></button>
       </label>
     </li>
   </ul>
