--- a/app/signUp/sponsoredPage/view.html
+++ b/app/signUp/sponsoredPage/view.html
@@ -1,4 +1,4 @@
-
+<div class="container">
 <div class="row">
   <div class="col-md-12 col-sm-12 col-lg-12 col-xs-12 padding_0 listing_wrapper_inner">
       <form name="$ctrl.sponsoredPage" enctype="multipart/form-data" id="addlistForm">
@@ -42,4 +42,5 @@
     </div>
 </form>
   </div>
+</div>
 </div>
