sponsored page updated

--- a/app/signUp/sponsorStateSelect/view.html
+++ b/app/signUp/sponsorStateSelect/view.html
@@ -15,8 +15,8 @@
       <!-- <input type="checkbox" name="" ng-model="$root.checkedAllStates" ng-change="$ctrl.selectStateAll()" ng-init="$ctrl.checkAllText=' Select all states'" /> {{$ctrl.checkAllText}} -->
     </div>
   </div>
-  <!-- <div class="col-sm-12 steps_sponsored step2">Step2: Select various categories for your treatment center</div> -->
-  <!-- <div class="additional_filters">
+<div class="col-sm-12 steps_sponsored step2">Step2: Select various categories for your treatment center</div>
+  <div class="additional_filters">
     <div class="col-sm-12">
 
       <div class="col-sm-3">
@@ -42,6 +42,6 @@
         <div ng-dropdown-multiselect="" id="byDrug" ng-click="$ctrl.checkFirst()" options="$root.byDrug" selected-model="$root.byDrugModel[$root.activeCenter]" translation-texts="$ctrl.buttonTxtByDrug" ng-if="$root.byDrugModel[$root.activeCenter]" extra-settings="$ctrl.byDrug" events="{onItemSelect: $ctrl.updateCart, onItemDeselect: $ctrl.updateCart}" checkboxes="true"></div>
       </div>
     </div>
-  </div> -->
+  </div>
 
 </div>
