Updated links to sponsored pages, fixed sponsored page issue

--- a/app/signUp/sponserPage/view.html
+++ b/app/signUp/sponserPage/view.html
@@ -27,7 +27,7 @@ and get fratured in them? This makes it easier for
 you to advertise your treatment center specifically
 with the target market that you are looking at.</p>
             <p><strong>You have now upgraded your membership.</strong></p>
-            <p class="lead">Add Sponsor Pages</p>
+            <p class="lead"><a href="javascript:void(0)" ng-click="$ctrl.goto_sponsored_page()">Add Sponsor Pages</a></p>
             <p>You can also choose to publish ads for your
 testcenter on our website to gain more visibility
 accross all audience.</p>
